feat(l10n): add Macedonian translation

--- a/translations/translations.qrc
+++ b/translations/translations.qrc
@@ -21,6 +21,7 @@
         <file>jbo.qm</file>
         <file>ko.qm</file>
         <file>lt.qm</file>
+        <file>mk.qm</file>
         <file>nl.qm</file>
         <file>no_nb.qm</file>
         <file>pl.qm</file>
