--- a/ui/chatForm/buttons.css
+++ b/ui/chatForm/buttons.css
@@ -67,6 +67,14 @@ QAbstractButton#callButton
     height: 40px;
 }
 
+QAbstractButton#searchButton
+{
+    background-image: url(":/ui/chatForm/searchButton.svg");
+    border-radius: 5px;
+    width: 50px;
+    height: 40px;
+}
+
 /* Common */
 
 QAbstractButton
