--- a/ui/chatForm/buttons.css
+++ b/ui/chatForm/buttons.css
@@ -75,6 +75,25 @@ QAbstractButton#searchButton
     height: 40px;
 }
 
+/* SearchLine */
+
+
+QAbstractButton#searchUpButton
+{
+    background-image: url(":/ui/chatForm/searchUpButton.svg");
+    border-radius: 5px;
+    width: 35px;
+    height: 35px;
+}
+
+QAbstractButton#searchDownButton
+{
+    background-image: url(":/ui/chatForm/searchDownButton.svg");
+    border-radius: 5px;
+    width: 35px;
+    height: 35px;
+}
+
 /* Common */
 
 QAbstractButton
