--- a/src/widget/form/settings/avform.ui
+++ b/src/widget/form/settings/avform.ui
@@ -30,8 +30,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>830</width>
-        <height>495</height>
+        <width>810</width>
+        <height>527</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -109,7 +109,7 @@
            </widget>
           </item>
           <item row="4" column="1" colspan="2">
-           <widget class="QComboBox" name="inModeComboBox"></widget>
+           <widget class="QComboBox" name="inModeComboBox"/>
           </item>
           <item row="5" column="0">
            <widget class="QLabel" name="audioThresholdLabel">
@@ -133,7 +133,11 @@
            </widget>
           </item>
           <item row="5" column="1">
-           <widget class="HotkeyInput" name="pushToTalkShortcutInput"></widget>
+           <widget class="HotkeyInput" name="pushToTalkShortcutInput">
+            <property name="toolTip">
+             <string>Set a push to talk hotkey.</string>
+            </property>
+           </widget>
           </item>
           <item row="0" column="0">
            <widget class="QLabel" name="outDevLabel">
@@ -171,15 +175,15 @@
           </item>
           <item row="7" column="1" colspan="2">
            <widget class="QProgressBar" name="volumeDisplay">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
             <property name="textVisible">
              <bool>false</bool>
             </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
            </widget>
-	   </item> 
-	  <item row="8" column="0" colspan="3">
+          </item>
+          <item row="8" column="0" colspan="3">
            <widget class="QCheckBox" name="cbEnableBackend2">
             <property name="enabled">
              <bool>true</bool>
@@ -288,9 +292,9 @@ which may lead to problems with video calls.</string>
   </customwidget>
   <customwidget>
    <class>HotkeyInput</class>
-   <extends>QTextEdit</extends>
+   <extends>QLineEdit</extends>
    <header>src/widget/form/settings/hotkeyinput.h</header>
-  </customwidget> 
+  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>scrollArea</tabstop>
