feat(chat): full screen video chat
Implements #2922 and #2514.
This change adds:
- a button for enabling full screen mode
- a panel with buttons for controlling the chat in full screen mode
- a button to toggle video preview
- new icons

--- a/res.qrc
+++ b/res.qrc
@@ -52,10 +52,16 @@
         <file>ui/chatArea/scrollBarLeftArrow.svg</file>
         <file>ui/chatArea/scrollBarRightArrow.svg</file>
         <file>ui/chatForm/buttons.css</file>
+        <file>ui/chatForm/fullScreenButtons.css</file>
         <file>ui/chatForm/callButton.svg</file>
         <file>ui/chatForm/micButton.svg</file>
+        <file>ui/chatForm/micButtonRed.svg</file>
         <file>ui/chatForm/videoButton.svg</file>
+        <file>ui/chatForm/videoButtonRed.svg</file>
         <file>ui/chatForm/volButton.svg</file>
+        <file>ui/chatForm/volButtonRed.svg</file>
+        <file>ui/chatForm/videoPreview.svg</file>
+        <file>ui/chatForm/videoPreviewRed.svg</file>
         <file>ui/chatForm/emoteButton.svg</file>
         <file>ui/chatForm/fileButton.svg</file>
         <file>ui/chatForm/screenshotButton.svg</file>
@@ -63,6 +69,7 @@
         <file>ui/chatForm/searchHideButton.svg</file>
         <file>ui/chatForm/searchUpButton.svg</file>
         <file>ui/chatForm/sendButton.svg</file>
+        <file>ui/chatForm/exitFullScreenButton.svg</file>
         <file>ui/emoticonWidget/dot_page.svg</file>
         <file>ui/emoticonWidget/dot_page_current.svg</file>
         <file>ui/emoticonWidget/dot_page_hover.svg</file>
