--- a/themes/default/chatForm/buttons.css
+++ b/themes/default/chatForm/buttons.css
@@ -2,7 +2,7 @@
 
 QAbstractButton#emoteButton
 {
-    background-image: url(":/ui/chatForm/emoteButton.svg");
+    background-image: url("@getImagePath(chatForm/emoteButton.svg)");
     border-top-right-radius: 5px;
     width: 24px;
     height: 24px;
@@ -10,7 +10,7 @@ QAbstractButton#emoteButton
 
 QAbstractButton#fileButton
 {
-    background-image: url(":/ui/chatForm/fileButton.svg");
+    background-image: url("@getImagePath(chatForm/fileButton.svg)");
     border-bottom-right-radius: 5px;
     width: 24px;
     height: 24px;
@@ -18,7 +18,7 @@ QAbstractButton#fileButton
 
 QAbstractButton#screenshotButton
 {
-    background-image: url(":/ui/chatForm/screenshotButton.svg");
+    background-image: url("@getImagePath(chatForm/screenshotButton.svg)");
     border-top-left-radius: 5px;
     width: 24px;
     height: 24px;
@@ -26,7 +26,7 @@ QAbstractButton#screenshotButton
 
 QAbstractButton#sendButton
 {
-    background-image: url(":/ui/chatForm/sendButton.svg");
+    background-image: url("@getImagePath(chatForm/sendButton.svg)");
     border-radius: 5px;
     width: 50px;
     height: 50px;
@@ -37,7 +37,7 @@ QAbstractButton#sendButton
 
 QAbstractButton#volButton
 {
-    border-image: url(":/ui/chatForm/volButton.svg");
+    border-image: url("@getImagePath(chatForm/volButton.svg)");
     border-radius: 5px;
     width: 22px;
     height: 18px;
@@ -45,7 +45,7 @@ QAbstractButton#volButton
 
 QAbstractButton#micButton
 {
-    border-image: url(":/ui/chatForm/micButton.svg");
+    border-image: url("@getImagePath(chatForm/micButton.svg)");
     border-radius: 5px;
     width: 22px;
     height: 18px;
@@ -53,7 +53,7 @@ QAbstractButton#micButton
 
 QAbstractButton#videoButton
 {
-    background-image: url(":/ui/chatForm/videoButton.svg");
+    background-image: url("@getImagePath(chatForm/videoButton.svg)");
     border-radius: 5px;
     width: 50px;
     height: 40px;
@@ -61,7 +61,7 @@ QAbstractButton#videoButton
 
 QAbstractButton#callButton
 {
-    background-image: url(":/ui/chatForm/callButton.svg");
+    background-image: url("@getImagePath(chatForm/callButton.svg)");
     border-radius: 5px;
     width: 50px;
     height: 40px;
@@ -71,7 +71,7 @@ QAbstractButton#callButton
 
 QAbstractButton#searchHideButton
 {
-    background-image: url(":/ui/chatForm/searchHideButton.svg");
+    background-image: url("@getImagePath(chatForm/searchHideButton.svg)");
     border-radius: 5px;
     width: 35px;
     height: 35px;
@@ -80,7 +80,7 @@ QAbstractButton#searchHideButton
 
 QAbstractButton#searchUpButton
 {
-    background-image: url(":/ui/chatForm/searchUpButton.svg");
+    background-image: url("@getImagePath(chatForm/searchUpButton.svg)");
     border-radius: 5px;
     width: 35px;
     height: 35px;
@@ -88,7 +88,7 @@ QAbstractButton#searchUpButton
 
 QAbstractButton#searchDownButton
 {
-    background-image: url(":/ui/chatForm/searchDownButton.svg");
+    background-image: url("@getImagePath(chatForm/searchDownButton.svg)");
     border-radius: 5px;
     width: 35px;
     height: 35px;
