--- a/ui/settings/mainContent.css
+++ b/ui/settings/mainContent.css
@@ -223,3 +223,9 @@ QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
 {
     background: none;
 }
+
+QRadioButton
+{
+    background: white;
+    color: black;
+}
