--- a/src/widget/form/settings/userinterfacesettings.ui
+++ b/src/widget/form/settings/userinterfacesettings.ui
@@ -207,6 +207,13 @@
               </item>
              </layout>
             </item>
+            <item>
+             <widget class="QCheckBox" name="desktopNotify">
+              <property name="text">
+               <string>Notify via desktop notifications</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
           <item>
