fix(ui):Revised the context menu enabled/disabled behaviors

--- a/ui/statusButton/statusButton.css
+++ b/ui/statusButton/statusButton.css
@@ -24,17 +24,21 @@ QPushButton:pressed
    background-color: @themeMediumDark;
 }
 
-QPushButton:focus {
+QPushButton:focus
+{
     outline: none;
 }
 
-QPushButton::menu-indicator {image: none;}
+QPushButton::menu-indicator
+{
+    image: none;
+}
 
 QPushButton::menu-indicator:pressed, QPushButton::menu-indicator:open
 {
-  image: url(":ui/statusButton/menu_indicator.svg");
-  subcontrol-origin: padding;
-  subcontrol-position: bottom center;
-  position: relative;
+    image: url(":ui/statusButton/menu_indicator.svg");
+    subcontrol-origin: padding;
+    subcontrol-position: bottom center;
+    position: relative;
     bottom: 2px;
 }
