refactor: add SearchDirection

--- a/src/widget/form/searchsettingsform.ui
+++ b/src/widget/form/searchsettingsform.ui
@@ -20,7 +20,16 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item row="0" column="0">
@@ -38,7 +47,7 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Start searching:</string>
+        <string>Start search:</string>
        </property>
       </widget>
      </item>
