--- a/src/widget/form/settings/generalsettings.ui
+++ b/src/widget/form/settings/generalsettings.ui
@@ -39,8 +39,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>1276</width>
-        <height>587</height>
+        <width>1298</width>
+        <height>566</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,0">
@@ -298,7 +298,7 @@ instead of closing itself.</string>
               </property>
              </widget>
             </item>
-            <item row="3" column="0">
+            <item row="4" column="0">
              <widget class="QCheckBox" name="autoacceptFiles">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -311,6 +311,13 @@ instead of closing itself.</string>
               </property>
               <property name="text">
                <string>Autoaccept files</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="1">
+             <widget class="QPushButton" name="openAutoSaveFilesDir">
+              <property name="text">
+               <string>Open Directory</string>
               </property>
              </widget>
             </item>
