--- a/src/widget/form/settings/userinterfacesettings.ui
+++ b/src/widget/form/settings/userinterfacesettings.ui
@@ -150,9 +150,9 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QCheckBox" name="gcColors">
+           <widget class="QCheckBox" name="useNameColors">
             <property name="text">
-             <string>Use colors in group chats</string>
+             <string>Use colored nicknames in chats</string>
             </property>
            </widget>
           </item>
