refactor: edit default theme

--- a/themes/default/settings/mainContent.css
+++ b/themes/default/settings/mainContent.css
@@ -69,6 +69,11 @@ QTabWidget
     background-color: white;
 }
 
+QTabBar::tab:!selected 
+{
+    color: #5e5e5e;
+}
+
 QScrollArea
 {
     background-color: white;
