--- a/res.qrc
+++ b/res.qrc
@@ -102,6 +102,7 @@
         <file>themes/default/fileTransferInstance/filetransferWidget.css</file>
         <file>themes/default/acceptCall/acceptCall.svg</file>
         <file>themes/default/rejectCall/rejectCall.svg</file>
+        <file>themes/default/global.css</file>
         <file>img/login_logo.svg</file>
         <file>themes/default/notificationEdge/notificationEdge.css</file>
         <file>themes/default/loginScreen/loginScreen.css</file>
