refactor: add colors to QTabBar

--- a/themes/default/global.css
+++ b/themes/default/global.css
@@ -1,24 +1,24 @@
 QLabel
 {
-    color: black
+    color: black;
 }
 
 QLineEdit
 {
-    color: black
+    color: black;
 }
 
 QTextEdit
 {
-    color: black
+    color: black;
 }
 
 QSpinBox
 {
-    color: black
+    color: black;
 } 
 
 QListView
 {
-    color: black
+    color: black;
 }
