--- a/res.qrc
+++ b/res.qrc
@@ -45,6 +45,7 @@
         <file>img/taskbar/light/taskbar_event.svg</file>
         <file>img/transfer.svg</file>
         <file>themes/default/fileTransferWidget/fileDone.svg</file>
+	<file>themes/default/centralWidget/centralWidget.css</file>
         <file>themes/default/chatArea/chatArea.css</file>
         <file>themes/default/chatArea/chatHead.css</file>
         <file>themes/default/chatArea/innerStyle.css</file>
@@ -102,7 +103,6 @@
         <file>themes/default/fileTransferInstance/filetransferWidget.css</file>
         <file>themes/default/acceptCall/acceptCall.svg</file>
         <file>themes/default/rejectCall/rejectCall.svg</file>
-        <file>themes/default/global.css</file>
         <file>img/login_logo.svg</file>
         <file>themes/default/notificationEdge/notificationEdge.css</file>
         <file>themes/default/loginScreen/loginScreen.css</file>
